2004-07-26  Steve Lhomme  <steve.lhomme@free.fr>

	* gst-libs/gst/colorbalance/colorbalance.vcproj:
	* gst-libs/gst/idct/idct.vcproj:
	* gst-libs/gst/media-info/media-info.vcproj:
	* gst-libs/gst/mixer/mixer.vcproj:
	* gst-libs/gst/navigation/navigation.vcproj:
	* gst-libs/gst/play/play.vcproj:
	* gst-libs/gst/propertyprobe/propertyprobe.vcproj:
	* gst-libs/gst/resample/resample.vcproj:
	* gst-libs/gst/tuner/tuner.vcproj:
	* gst-libs/gst/video/video.vcproj:
	* gst-libs/gst/xoverlay/xoverlay.vcproj:
	  more plugins supported under windows

2004-07-25 Iain <iain@prettypeople.org>

	* gst/wavparse/gstwavparse.c (gst_wavparse_fmt): Set the caps on the
	pad now rather than when the pad is created because state changes wipe
	explicit caps (fixes #148043).

2004-07-25  Sebastien Cote  <sc5@hermes.usherb.ca>

	reviewed by Benjamin Otte  <otte@gnome.org>

	* ext/mad/gstmad.c:
	  fix mad plugin crashing on Sun (fixes #148289)

2004-07-25  Steve Lhomme  <steve.lhomme@free.fr>

	* gst/avi/avi.def:
	* gst/avi/avi.vcproj:
	* gst/matroska/matroska.def:
	* gst/matroska/matroska.vcproj:
	  remove unused .def files

2004-07-25  Steve Lhomme  <steve.lhomme@free.fr>

	* gst-libs/gst/audio/gstaudiofilter.c:
	  Clean the local include

2004-07-25  Steve Lhomme  <steve.lhomme@free.fr>

	* win32/gst.sln:
	* gst-libs/gst/audio/audio.def:
	* gst-libs/gst/audio/audio.vcproj:
	* gst-libs/gst/audio/audiofilter.vcproj:
	* gst-libs/gst/audio/riff.def:
	* gst-libs/gst/audio/riff.vcproj:
	* gst-libs/gst/gst-libs.def:
	* gst-libs/gst/gst-libs.vcproj:
	* gst/avi/avi.vcproj:
	* gst/avi/avi.vcproj:
	  Copy the files where needed after building, cleaner projects

2004-07-25  Steve Lhomme  <steve.lhomme@free.fr>

	* gst/matroska/ebml-write.c:
	  Fix some 64 bits constants to be glib friendly

2004-07-24  Steve Lhomme  <steve.lhomme@free.fr>

	* win32/gst.sln:
	* gst-libs/gst/gst-libs.def:
	* gst-libs/gst/gst-libs.vcproj:
	* gst/matroska/matroska.def:
	* gst/matroska/matroska.vcproj: